ci: fix test ansible

--- a/deploy/templates/fastapi.service.j2
+++ b/deploy/templates/fastapi.service.j2
@@ -1,5 +1,5 @@
 [Unit]
-Description=HSBC Pipeline Demo FastAPI Application
+Description=ONE Pipeline Demo FastAPI Application
 After=network.target
 
 [Service]
